# ScamShield

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260101_0000_0001_initial.py
app/: main.py
app/api/: deps.py  health.py  router.py
app/core/: config.py  exceptions.py  logging.py  observability.py  security.py
app/db/: base.py  session.py  types.py
app/detectors/: base.py  ensemble.py  impersonation_detector.py  llm_detector.py  ocr_detector.py  registry.py  text_detector.py  text_normalize.py  upi_detector.py  url_detector.py
app/models/: __init__.py  enums.py  feedback.py  prediction.py  risk_factor.py  scam_category.py  scan.py  user.py
app/repositories/: base.py  feedback_repo.py  scan_repo.py  user_repo.py
app/schemas/: admin.py  auth.py  common.py  detection.py  history.py  stats.py
app/services/: admin_service.py  auth_service.py  detection_service.py  history_service.py  stats_service.py
app/tests/: conftest.py  test_auth.py  test_detect_api.py  test_detectors.py
app/utils/: text.py
app/workers/: celery_app.py  tasks.py
data/curated/: india_seed.csv
deploy/: prometheus.yml
docs/architecture/: README.md
scripts/: eval_pipeline.py  fetch_datasets.py  gen_hld.py  gen_india_seed.py  gen_pptcontent.py  seed.py  svg_to_png.js  train_text_model.py
web/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
(+38 files in other folders)
